--- a/roles/services/tasks/roundcube.yml
+++ b/roles/services/tasks/roundcube.yml
@@ -3,7 +3,7 @@
   include_tasks: service_common.yml
   vars:
     - service_name: roundcube
-    - service_image_dir: '{{ local_path }}/images/roundcube'
+    - service_image_dir: '{{ build_path }}/images/roundcube'
     - service_dirs:
         - certs
     - service_copy_certs:
@@ -14,5 +14,5 @@
   include_tasks: service_common.yml
   vars:
     - service_name: roundcubedb
-    - service_image_dir: '{{ local_path }}/images/roundcubedb'
+    - service_image_dir: '{{ build_path }}/images/roundcubedb'
   tags: [init, build, push]
