--- a/roles/services/tasks/caddy.yml
+++ b/roles/services/tasks/caddy.yml
@@ -3,7 +3,7 @@
   include_tasks: service_common.yml
   vars:
     - service_name: caddy
-    - service_image_dir: '{{ local_path }}/images/caddy'
+    - service_image_dir: '{{ build_path }}/images/caddy'
     - service_dirs:
         - certs
         - private
