--- a/roles/services/tasks/gitlab.yml
+++ b/roles/services/tasks/gitlab.yml
@@ -3,7 +3,7 @@
   include_tasks: service_common.yml
   vars:
     - service_name: gitlab
-    - service_image_dir: '{{ local_path }}/images/gitlab'
+    - service_image_dir: '{{ build_path }}/images/gitlab'
     - service_dirs:
         - certs
     - service_gen_certs:
