--- a/roles/services/tasks/mailserv.yml
+++ b/roles/services/tasks/mailserv.yml
@@ -3,7 +3,7 @@
   include_tasks: service_common.yml
   vars:
     - service_name: mailserv
-    - service_image_dir: '{{ local_path }}/images/mailserv'
+    - service_image_dir: '{{ build_path }}/images/mailserv'
     - service_dirs:
         - certs
     - service_gen_certs:
