--- a/roles/services/tasks/openldap.yml
+++ b/roles/services/tasks/openldap.yml
@@ -3,7 +3,7 @@
   include_tasks: service_common.yml
   vars:
     - service_name: openldap
-    - service_image_dir: '{{ local_path }}/images/openldap'
+    - service_image_dir: '{{ build_path }}/images/openldap'
     - service_dirs:
         - certs
     - service_gen_certs:
