Moved LDAP config to inventory

--- a/roles/services/templates/storage/image/service/proftpd/config/proftpd.conf
+++ b/roles/services/templates/storage/image/service/proftpd/config/proftpd.conf
@@ -55,12 +55,12 @@ SFTPHostKey	/etc/proftpd/certs/cert.key
 SFTPAuthMethods	password
 SFTPOptions IgnoreSCPUploadTimes IgnoreSFTPSetTimes
 
-LDAPServer {{ conf['ldap_hostname'] }}:389
-LDAPProtocolVersion 3
-LDAPAuthBinds on
-LDAPBindDN "cn={{ openldap['ldap_readonly_user_username'] }},{{ openldap['ldap_base_dn'] }}" "{{ openldap['ldap_readonly_user_password'] }}"
-LDAPUsers ou=users,{{ openldap['ldap_base_dn'] }} "(&(cn=%u)(objectclass=posixAccount)(memberOf=cn=storage_admins,ou=groups,{{ openldap['ldap_base_dn'] }}))"
-LDAPGroups ou=groups,{{ openldap['ldap_base_dn'] }}
+LDAPServer {{ storage['proftpd']['LDAPServer'] }}
+LDAPProtocolVersion {{ storage['proftpd']['LDAPProtocolVersion'] }}
+LDAPAuthBinds {{ storage['proftpd']['LDAPAuthBinds'] }}
+LDAPBindDN {{ storage['proftpd']['LDAPBindDN'] }}
+LDAPUsers {{ storage['proftpd']['LDAPUsers'] }}
+LDAPGroups {{ storage['proftpd']['LDAPGroups'] }}
 
 LDAPForceDefaultUID on
 LDAPForceDefaultGID on
