Move proftpd config

--- a/roles/services/templates/storage/image/service/proftpd/config/proftpd.conf
+++ b/roles/services/templates/storage/image/service/proftpd/config/proftpd.conf
@@ -1,75 +1,1 @@
-SetEnv TZ :/etc/localtime
-
-ServerType	standalone
-UseIPv6	off
-UseReverseDNS	off
-
-RequireValidShell	off
-
-MultilineRFC2228	on
-DefaultServer	on
-ShowSymlinks	on
-
-TimeoutNoTransfer	600
-TimeoutStalled	600
-TimeoutIdle	1200
-
-ListOptions "-la"
-
-RootLogin	off
-DenyFilter	\\\\*.*/
-
-DeleteAbortedStores on
-AllowOverwrite	on
-AllowRetrieveRestart on
-AllowStoreRestart on
-
-Umask 0002 0002
-
-LoadModule mod_ldap.c
-LoadModule mod_sftp.c
-LoadModule mod_rewrite.c
-
-<IfModule mod_ctrls.c>
-    ControlsEngine      off
-    ControlsMaxClients  2
-    ControlsLog         /var/log/proftpd/controls.log
-    ControlsInterval    5
-    ControlsSocket      /var/run/proftpd/proftpd.sock
-</IfModule>
-
-Port 22
-
-PidFile		/var/log/proftpd/proftpd.pid
-SystemLog	/var/log/proftpd/proftpd.log
-TransferLog	/var/log/proftpd/proftpd.log
-SFTPLog     /var/log/proftpd/sftp.log
-RewriteLog	/var/log/proftpd/rewrite.log
-
-Protocols sftp
-AuthOrder mod_ldap.c
-
-SFTPEngine	on
-SFTPCompression	delayed
-SFTPHostKey	/etc/proftpd/certs/cert.key
-SFTPAuthMethods	password
-SFTPOptions IgnoreSCPUploadTimes IgnoreSFTPSetTimes
-
-LDAPServer {{ storage['proftpd']['LDAPServer'] }}
-LDAPProtocolVersion {{ storage['proftpd']['LDAPProtocolVersion'] }}
-LDAPAuthBinds {{ storage['proftpd']['LDAPAuthBinds'] }}
-LDAPBindDN {{ storage['proftpd']['LDAPBindDN'] }}
-LDAPUsers {{ storage['proftpd']['LDAPUsers'] }}
-LDAPGroups {{ storage['proftpd']['LDAPGroups'] }}
-
-LDAPForceDefaultUID on
-LDAPForceDefaultGID on
-LDAPDefaultUID 3000
-LDAPDefaultGID 3000
-
-RewriteEngine on
-RewriteHome on
-RewriteCondition %m REWRITE_HOME
-RewriteRule ^(.*) /opt/var/storage
-
-DefaultRoot ~
+{{ proftpd['conf'] }}
